[project]
name = "f1-el"
version = "0.1.0"
description = "Extract & Load code from F1 API to PostgreSQL database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.126.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
